--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,9 @@ li {
 .justify-content {
     justify-content: space-between;
 }
-/* .justify-center {
+.justify-center {
     justify-content: center;
-} */
+}
 /* Common css ends here */
 
 /* nav starts here*/
@@ -66,71 +66,282 @@ nav .container .row .menu ul li a:hover {
 nav .container .row .menu ul li a.active {
     background-color: #cfc91d;
     color: #0b1016;
-    transition: 0.6s;
-}
-
-nav .container .row .menu ul li a.active:hover {
-    color: #ffffff;
+    transition: 0.4s;
 }
 /* nav  ends here */
 
 /* banner section starts here */
 #banner {
+    position: relative;
     background-image: url(../img/banner.png);
     background-size: cover;
     height: 728px;
-    position: relative;
     color: #ffffff;
     text-align: center;
 }
-#banner::before {
+#banner .container {
+    height: 100%;
+}
+#banner .container::before {
     content: '';
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 0px;
-    left: 0px;
-    z-index: 99;
+    top: 0;
+    left: 0;
+    background-color: #0b1016;
     opacity: 0.7;
-    background: #0b1016;
 }
 #banner .banner-content {
-    z-index: 999;
     position: absolute;
-    top: 43%;
-    left: 12%;
+    z-index: 999;
 }
 #banner .banner-content h3 {
     font-size: 30px;
 }
 #banner .banner-content b {
-    font-size: 68px;
     font-weight: 800;
+    font-size: 68px;
     letter-spacing: 30px;
     text-transform: uppercase;
 }
 #banner .banner-content h5 {
     font-size: 18px;
 }
-#banner .banner-content img {
-    display: block;
+#banner .banner-content .divider {
+    width: 108px;
     margin: auto;
-    padding: 50px 0;
+}
+#banner .banner-content .divider img {
+    margin: 52px 0;
+    width: 100%;
 }
 #banner .banner-content a {
     display: inline-block;
+    padding: 18px 43px;
     color: #0b1016;
     background-color: #cfc91d;
-    padding: 19px 43px;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 800;
+    transition: 0.4s;
+}
+#banner .banner-content a:hover {
+    color: #cfc91d;
+    background-color: #0b1016;
+}
+/* Banner section ends here */
+
+
+/* About section starts here */
+#about {
+    padding: 100px 0;
+}
+/* common head css starts here */
+.common-head-section {
+    text-align: center;
+    color: #7e8287;
+    font-size: 16px;
+}
+.common-head-section h3 {
+    color: #02918c;
+    font-weight: 800;
+    font-size: 46px;
+    text-transform: uppercase;
+}
+.common-head-section p:nth-child(2) {
+    padding: 32px 0;
+}
+.common-head-section p:last-child {
+    line-height: 41px;
+}
+.common-head-section p:last-child span {
+    font-size: 23px;
+    font-weight: 800;
+}
+/* common head ends here */
+#about .common-head-section p:last-child {
+    width: 930px;
+    margin: auto;
+}
+#about .common-head-section {
+    margin-bottom: 80px;
+}
+/* card starts here */
+.card {
+    height: 250px;
+    color: #7e8287;
+    text-align: center;
+    line-height: 21px;
+    border-right: 1px solid #d9dbdb;
+    padding: 0 55px;
+}
+.card h3 {
+    font-size: 16px;
+    font-weight: 800;
+    padding: 29px 0;
+}
+.card p {
+    width: 170px;
+    font-size: 11px;
+}
+/* card ends here */
+#about .container .row .card:last-child {
+    border: none;
+}
+/* about section ends here */
+
+
+/* services section starts here */
+#services {
+    padding: 74px 0;
+    height: 728px;
+    position: relative;
+    background-color: #f0f0e8;
+}
+#services .container .common-head-section {
+    text-align: left;
+    width: 473px;
+}
+#services .background-img {
+    position: absolute;
+    opacity: 0.3;
+    top: 0;
+    right: 0;
+}
+#services .container .row {
+    width: 600px;
+}
+#services .container .row .card {
+    border: none;
+    text-align: left;
+    padding: 0;
+    padding-right: 128px;
+    padding-top: 35px;
+    height: fit-content;
+}
+#services .container .row .card h3 {
+    padding-top: 17px;
+    padding-bottom: 23px;
+}
+#services .container .row .card p {
+    padding: 0;
+}
+/* services section ends here */
+
+
+/* my work section starts here */
+#my-work .container .common-head-section {
+    padding: 100px 0;
+}
+#my-work .container .common-head-section p:last-child {
+    width: 680px;
+    margin: auto;
+}
+/* photo collage starts here */
+#my-work .row .photo-collage {
+    position: relative;
+    text-align: center;
+    color: #fff;
+    width: 25%;
+}
+#my-work .photo-collage img {
+    width: 100%;
+    display: block;
+    height: 100%;
+}
+/* photo collage ends here */
+/* hover card starts here */
+#my-work .row .photo-collage .hover-card {
+    position: absolute;
+    background-color: rgba(2, 145, 140, 0.85);
+    top: 20px;
+    bottom: 20px;
+    left: 28px;
+    right: 28px;
+    padding: 60px 35px;
+    transform: scale(0);
+    transition: 0.4s;
+}
+#my-work .row .photo-collage:hover .hover-card {
+    transform: scale(1);
+}
+#my-work .row .photo-collage .hover-card h3 {
+    font-weight: 800;
+    font-size: 16px;
+    padding-bottom: 15px;
+}
+#my-work .row .photo-collage .hover-card p {
+    font-size: 13px;
+    line-height: 21px;
+}
+/* hover card ends here */
+/* my work section ends here */
+
+
+/* contact me section starts here */
+#contact-me  {
+    padding-top: 102px;
+    padding-bottom: 72px;
+}
+#contact-me .container .common-head-section {
+    width: 680px;
+    margin: auto;
+}
+/* contact me section ends here */
+
+/* footer starts here */
+footer {
+    background-color: #0b0b0b;
+}
+footer form input,
+footer form textarea {
+    display: block;
+    resize: none;
+    background: none;
+    border: 0;
+    margin: auto;
+    padding-top: 69px;
+    padding-bottom: 18px;
+    font-size: 16px;
+    text-align: center;
+    color: #898989;
+    border-bottom: 1px solid #898989;
+}
+footer form input::placeholder,
+footer form textarea::placeholder {
+    text-transform: uppercase;
+    text-align: center;
+}
+footer form input {
+    width: 637px;
+}
+footer form textarea {
+    width: 916px;
+}
+footer form button {
+    display: block;
+    background: none;
+    border: 0;
+    margin: auto;
+    padding: 70px 0; 
+}
+footer form button a {
+    display: block;
+    padding: 19px 64px;
+    background-color: #cfc91d;
+    color: #0b1016;
     font-size: 14px;
     font-weight: 800;
     text-transform: uppercase;
-    transition: 0.6s;
 }
-#banner .banner-content a:hover {
-    background:#02918b ;
-    color: #cfc91d;
+/* copyright section starts here */
+footer .copyright-section {
+    font-size: 12px;
+    padding: 35px 0;
+    color: #7e8287;
+    background-color: #000000;
+    text-align: center;
 }
-/* banner section ends here */
-
-/* about section starts here */
+/* copyright section ends here */
+/* footer ends here */
